fix bug: remove overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,8 @@
   padding: 0;
 }
 
-body {
+html,
+body{
   max-width: 100%;
   overflow-x: hidden;
 }
